review page added

--- a/templates/coreFunctions/post_detail.html
+++ b/templates/coreFunctions/post_detail.html
@@ -56,7 +56,7 @@
                     {% endif %}
                     
                     <div class="post-body">
-                        <p>{{ post.body }}</p>
+                        <p>{{ post.body|linebreaksbr }}</p>
                     </div>
                     
                     <div class="post-actions">
